--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1767,6 +1767,109 @@
     "X_train_prep = preprocessor.fit_transform(X_train)\n",
     "X_test_prep = preprocessor.transform(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "35c12cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression:\n",
+      "MAE: 13564.57\n",
+      "RMSE: 25709.06\n",
+      "R²: 0.8223\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Entrenar el modelo\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train_prep, y_train)\n",
+    "\n",
+    "# Predecir\n",
+    "y_pred_lr = lr.predict(X_test_prep)\n",
+    "\n",
+    "# Evaluación\n",
+    "mae = mean_absolute_error(y_test, y_pred_lr)\n",
+    "mse = mean_squared_error(y_test, y_pred_lr)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred_lr)\n",
+    "\n",
+    "print(\"Linear Regression:\")\n",
+    "print(\"MAE:\", round(mae, 2))\n",
+    "print(\"RMSE:\", round(rmse, 2))\n",
+    "print(\"R²:\", round(r2, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f8ca61ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ridge Regression:\n",
+      "MAE: 13744.36\n",
+      "RMSE: 23829.23\n",
+      "R²: 0.8473\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "ridge = Ridge(alpha=1.0)\n",
+    "ridge.fit(X_train_prep, y_train)\n",
+    "y_pred_ridge = ridge.predict(X_test_prep)\n",
+    "\n",
+    "print(\"\\nRidge Regression:\")\n",
+    "print(\"MAE:\", round(mean_absolute_error(y_test, y_pred_ridge), 2))\n",
+    "print(\"RMSE:\", round(np.sqrt(mean_squared_error(y_test, y_pred_ridge)), 2))\n",
+    "print(\"R²:\", round(r2_score(y_test, y_pred_ridge), 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7b0065dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Lasso Regression:\n",
+      "MAE: 13313.86\n",
+      "RMSE: 25105.97\n",
+      "R²: 0.8305\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "lasso = Lasso(alpha=1.0, max_iter=5000)  # Aumentado de 1000 (default) a 5000\n",
+    "lasso.fit(X_train_prep, y_train)\n",
+    "y_pred_lasso = lasso.predict(X_test_prep)\n",
+    "\n",
+    "print(\"\\nLasso Regression:\")\n",
+    "print(\"MAE:\", round(mean_absolute_error(y_test, y_pred_lasso), 2))\n",
+    "print(\"RMSE:\", round(np.sqrt(mean_squared_error(y_test, y_pred_lasso)), 2))\n",
+    "print(\"R²:\", round(r2_score(y_test, y_pred_lasso), 4))"
+   ]
   }
  ],
  "metadata": {
