--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2269,6 +2269,19 @@
     "print(\"RMSE:\", round(rmse_nn, 2))\n",
     "print(\"R²:\", round(r2_nn, 4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73faf3c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"I tested a neural network to capture potential nonlinear relationships in the data. Although it achieved a slight increase in R², \n",
+    "the MAE was similar to, or even slightly worse than, that of simpler models like Ridge. With better hyperparameter fitting and techniques \n",
+    "such as regularization or more layers, its performance would likely improve. However, in this particular case, it didn't offer a \n",
+    "significant improvement over classical methods, so I decided not to pursue that approach further.\"\"\""
+   ]
   }
  ],
  "metadata": {
